--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{ secrets.PAT_TOKEN }}
           script: |
               await github.rest.actions.createWorkflowDispatch({
-              owner: 'applexad',
+              owner: 'dong152389',
               repo: 'alist-freebsd',
               workflow_id: 'build.yml',
               ref: 'main'
